corpus/stmt/let.nu
=====
let-001-smoke-test
=====

let x = 42

----

(nu_script
  (stmt_let
    (identifier)
    (val_number)))

=====
let-002-semicolon
=====

let x = 42;

-----

(nu_script
  (stmt_let
    (identifier)
    (val_number)))

=====
let-003-assignment-to-a-pipeline
=====

let x = 42 | math sin

-----

(nu_script
  (stmt_let
    (identifier)
    (val_number))
  (ERROR
    (identifier)))
